chore: Merged WorkloadNameFormat with Workload